MarcoKitTests/TestData/error/hex.marco
--before
{
    foo 0x
}

--after
12: Hexadecimal literal expected '\n'
